--- a/main.css
+++ b/main.css
@@ -972,6 +972,7 @@ footer {
     .start-button a {
         padding: 10px 35px;
     }
+    /* Section Testimonials */
     .flexbox-testimonials {
         display: flex;
         flex-wrap: wrap;
@@ -1012,54 +1013,174 @@ footer {
         width: 100%;
         margin-bottom: 60px;
     }
+    .link-posts {
+        margin-top: 70px;
+        margin-bottom: 50px;
+        text-align: center;
+        margin-right: 7%;
+    }
     /*Section Cursos */
     .flexbox-cursos {
         display: flex;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+    .header-cursos .header-cursos-h2 {
+        color: hsla(340, 100%, 63%, 1);
+        font: 700 50px 'Ubuntu', sans-serif;
+        margin-top: 50px;
+        margin-bottom: 5px;
+        text-align: initial;
+    }
+    .header-cursos p {
+        font: 400 20px 'Ubuntu', sans-serif;
+        margin-bottom: 40px;
+        text-align: initial;
+        color: #555;
     }
     .img-cursos img {
         display: block;
         margin: 0 auto;
-        width: 100%;
+        width: 60%;
+        display: block;
+        margin: 5px auto;
+        width: 75%;
+        margin-right: 5px;
+        max-width: 250px;
     }
     .img-cursos {
         flex: 1;
+        width: 110%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: -40px;
+        justify-content: space-evenly;
+    }
+    .img-cursos img {
+        display: block;
+        margin: 5px auto;
+        width: 75%;
+        margin-right: 5px;
     }
     .texto-de-cursos {
-        flex: 1;
+        flex: 2;
+        justify-content: left;
+        padding-top: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: normal;
+        margin-left: 66px;
+    }
+    .texto-de-cursos .img-cursos-h2 {
+        color: hsla(340, 100%, 63%, 1);
+        font: 700 27px 'Ubuntu', sans-serif;
+        margin-top: 10px;
+        margin-bottom: 23px;
+    }
+    .texto-de-cursos p {
+        color: hsla(0, 0%, 0%, 1);
+        font: 300 14px 'Ubuntu', sans-serif;
+        text-align: left;
+        padding-right: 105px;
+        padding-left: 0;
+        margin-bottom: 40px;
+    }
+    .cursos-button a {
+        padding: 10px 32px;
     }
     /*Section Curso */
     .flexbox-curso {
         display: flex;
+        gap: 16px;
     }
     .texto-curso {
         flex: 1;
+        padding-inline: 68px;
+    }
+    .texto-curso .curso-h2 {
+        color: hsla(340, 100%, 63%, 1);
+        font: 700 50px 'Ubuntu', sans-serif;
+        text-align: left;
+        margin-top: 50px;
+        margin-bottom: 35px;
+        width: 81%;
+    }
+    .flexbox-curso p {
+        color: hsla(0, 0%, 0%, 1);
+        font: 300 16px 'Ubuntu', sans-serif;
+        text-align: left;
+        padding-right: 10px;
+        padding-left: 0;
+        margin-bottom: 40px;
+        margin-top: 20px;
+        max-width: 343px;
     }
     .curso-img {
         flex: 1;
     }
     .curso-img img {
-        display: block;
-        width: 100%;
-        margin: 0 auto;
+        width: 80%;
+        margin-top: 20px;
         margin-bottom: 20px;
+        margin-left: -40px;
+        justify-content: space-evenly;
     }
     .flexbox-video {
         display: flex;
-        gap: 30px;
+        gap: 64px;
         margin-bottom: 50px;
+        margin-left: 6%;
+        /* max-height: none; */
+        margin-top: 6%;
+    }
+    .txt-video h4 {
+        font: 700 32px 'Ubuntu', sans-serif;
+        color: hsla(340, 100%, 63%, 1);
+        margin-top: 0px;
+        margin-bottom: 16px;
+    }
+    .video-youtube iframe {
+        width: 100%;
+        height: 100%;
+    }
+    .txt-video p {
+        width: 80%;
+        font: 700 15px 'Ubuntu', sans-serif;
+        margin-top: 6%;
     }
     /*Section Blog */
     .flexbox-blog {
+        margin-top: 10%;
+        margin-bottom: 10%;
         display: flex;
+    }
+    .texto-blog p {
+        font: 400 16px 'Ubuntu', sans-serif;
+        color: hsla(0, 0%, 33%, 1);
+        text-align: left;
+        margin-bottom: 20px;
+        margin-left: 10%;
     }
     .blog-img img {
         margin-bottom: 20px;
         display: block;
         margin: 0 auto;
-        width: 100%;
+        width: 80%;
     }
     .texto-blog {
         flex: 1;
+        margin-top: 5%;
+    }
+    .texto-blog .blog-h2 {
+        color: hsla(171, 39%, 42%, 1);
+        font: 700 41px 'Ubuntu', sans-serif;
+        text-align: left;
+        margin-top: 50px;
+        margin-bottom: 25px;
+        text-transform: uppercase;
+        width: 80%;
+        margin-left: 10%;
     }
     .blog-img {
         flex: 1;
@@ -1072,11 +1193,53 @@ footer {
     }
     .gallery {
         width: 50%;
+        padding: 4%;
+    }
+    .grey-container .centralize-container h3 {
+        font: 700 26px 'Nunito', sans-serif;
+        text-transform: inherit;
+        text-align: left;
+        padding-bottom: 10px;
+    }
+    .grey-container .gallery p {
+        font: 300 14px 'Ubuntu', sans-serif;
+        color: hsla(0, 0%, 0%, 1);
+        margin-bottom: 5px;
+        width: 100%;
+        margin-left: 2%;
     }
     /*Section Post */
     .flexbox-post-service {
         display: flex;
     }
+    .post-text p {
+        font: 300 17px 'Ubuntu', sans-serif;
+    }
+    .post .post-h2 {
+        font: 500 55px 'Ubuntu', sans-serif;
+    }
+    .post-text h4 {
+        font: 500 24px 'Ubuntu', sans-serif;
+    }
+    .data {
+        font: 300 20px 'Ubuntu', sans-serif;
+    }
+    .services-post-h2 {
+        font: 500 40px 'Ubuntu', sans-serif;
+    }
+    .flexbox-post-services {
+        display: flex;
+        margin-top: 5%;
+    }
+    /*
+    .img-services {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-left: 15px;
+        padding-right: 10px;
+    }*/
     /*Section Contato*/
     .forms {
         padding-top: 5px;
