--- a/main.css
+++ b/main.css
@@ -948,6 +948,7 @@ footer {
     /* Section Header */
     .flexbox-header {
         display: flex;
+        justify-content: center;
     }
     .header-img {
         display: block;
@@ -956,6 +957,12 @@ footer {
         margin-bottom: 20px;
     }
     /*Section Services */
+    .centralize-container {
+        width: 100%;
+        margin: 0px auto;
+        padding: 4%;
+        justify-content: center;
+    }
     .flexbox-services {
         display: flex;
         padding-top: 5%;
@@ -967,7 +974,10 @@ footer {
         height: 248px;
     }
     .img-services .h2-services {
-        margin-top: 20px;
+        color: hsla(340, 100%, 63%, 1);
+        font: 700 21px 'Ubuntu', sans-serif;
+        margin-top: 10px;
+        margin-bottom: 23px;
     }
     .img-services p {
         padding-right: 33px;
@@ -984,20 +994,30 @@ footer {
         display: flex;
         flex-wrap: wrap;
     }
+    .testimonials {
+        margin-top: 50px;
+        margin-bottom: 80px;
+        padding: 2%;
+    }
+    .person-testimonial {
+        font: 300 15px 'Nunito', sans-serif;
+        margin-bottom: 8px;
+        padding: 6px;
+        width: 320px;
+    }
     .centralize-container h3 {
         font: 700 30px 'Nunito', sans-serif;
         text-transform: uppercase;
         text-align: left;
         padding-bottom: 10px;
     }
-    .person-testimonial {
-        font: 300 16px 'Nunito', sans-serif;
-        margin-bottom: 8px;
-        padding: 6px;
-        width: 332px;
-    }
     .person-img {
         width: 50%;
+        display: flex;
+        gap: 15px;
+        align-items: center;
+        margin-bottom: 40px;
+        padding-left: 9px;
     }
     .centralize-container h3 {
         padding-left: 8px;
@@ -1006,7 +1026,8 @@ footer {
         padding: 10px 30px;
     }
     .more-content img {
-        width: 80%;
+        width: 100%;
+        max-width: 241px;
     }
     .txt-content {
         margin-top: 10px;
@@ -1022,7 +1043,16 @@ footer {
     }
     .link-posts {
         text-align: center;
-        margin-right: 7%;
+    }
+    .more-content {
+        margin-left: 19px;
+    }
+    .aditional-info .centralize-container h3 {
+        text-transform: uppercase;
+        width: 100%;
+        margin: 0px auto;
+        padding: 4%;
+        justify-content: center;
     }
     .link-posts :hover {
         color: #419488;
@@ -1032,6 +1062,9 @@ footer {
         display: flex;
         margin-top: 30px;
         margin-bottom: 20px;
+    }
+    .cursos .centralize-container {
+        padding-left: 10%;
     }
     .header-cursos .header-cursos-h2 {
         color: hsla(340, 100%, 63%, 1);
@@ -1107,7 +1140,7 @@ footer {
     }
     .texto-curso {
         flex: 1;
-        padding-inline: 68px;
+        padding-inline: 55px;
     }
     .texto-curso .curso-h2 {
         color: hsla(340, 100%, 63%, 1);
@@ -1115,7 +1148,7 @@ footer {
         text-align: left;
         margin-top: 50px;
         margin-bottom: 35px;
-        width: 81%;
+        width: 90%;
     }
     .flexbox-curso p {
         color: hsla(0, 0%, 0%, 1);
@@ -1142,8 +1175,10 @@ footer {
         gap: 64px;
         margin-bottom: 50px;
         margin-left: 6%;
-        /* max-height: none; */
         margin-top: 6%;
+    }
+    .video-youtube {
+        width: 100%;
     }
     .txt-video h4 {
         font: 700 32px 'Ubuntu', sans-serif;
@@ -1206,7 +1241,7 @@ footer {
         width: 50%;
         padding: 4%;
     }
-    .grey-container .centralize-container h3 {
+    .title-blog .grey-container .centralize-container h3 {
         font: 700 26px 'Nunito', sans-serif;
         text-transform: inherit;
         text-align: left;
@@ -1223,11 +1258,19 @@ footer {
     .flexbox-post-service {
         display: flex;
     }
+    #post .post centralize-container {
+        padding: 10%;
+    }
+    .post-text {
+        width: 92%;
+        margin-bottom: 100px;
+        padding-left: 9%;
+    }
     .post-text p {
         font: 300 17px 'Ubuntu', sans-serif;
     }
     .post .post-h2 {
-        font: 500 55px 'Ubuntu', sans-serif;
+        font: 500 53px 'Ubuntu', sans-serif;
     }
     .post-text h4 {
         font: 500 24px 'Ubuntu', sans-serif;
@@ -1244,7 +1287,7 @@ footer {
     }
     .img-post h2 {
         color: hsla(340, 100%, 63%, 1);
-        font: 700 23px 'Ubuntu', sans-serif;
+        font: 700 21px 'Ubuntu', sans-serif;
         margin-top: 45px;
         margin-bottom: 23px;
     }
