--- a/main.css
+++ b/main.css
@@ -798,6 +798,30 @@ footer {
     .flexbox-header {
         display: flex;
     }
+    .title-header {
+        width: 100%;
+        margin-top: 8%;
+        margin-bottom: 9%;
+    }
+    .centralize-container {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 10%;
+    }
+    .title {
+        margin-top: -30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-left: 50px;
+        padding-right: 10px;
+        align-items: center;
+    }
+    .title h1 {
+        font: 700 27px 'Ubuntu', sans-serif;
+        text-align: center;
+        text-transform: uppercase;
+    }
     .header-img {
         display: block;
         margin: 0 auto;
@@ -808,10 +832,38 @@ footer {
     .flexbox-services {
         display: flex;
     }
+    .grey-container {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .flexbox-services {
+        display: flex;
+        flex-direction: column;
+    }
+    .img-mobile {
+        margin-top: 0;
+        margin-bottom: 0;
+        width: 45%;
+    }
+    .centralize-container h3 {
+        font: 700 34px 'Ubuntu', sans-serif;
+        color: hsla(171, 39%, 42%, 1);
+        text-transform: uppercase;
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
     /*Section Testimonials */
     .flexbox-testimonials {
         display: flex;
         flex-wrap: wrap;
+    }
+    .flexbox-testimonials {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-content: stretch;
+        align-items: unset;
     }
     .person-img {
         width: 50%;
@@ -823,9 +875,44 @@ footer {
         width: 100%;
         margin-bottom: 60px;
     }
+    .link-posts {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        text-align: center;
+    }
+    .centralize-container {
+        width: 95%;
+        margin: 0 auto;
+        margin-top: 0%;
+        margin-bottom: 10%;
+    }
+    .centralize-container h3 {
+        font: 700 34px 'Ubuntu', sans-serif;
+        margin-bottom: 32px;
+    }
+    .header-cursos .header-cursos-h2 {
+        color: hsla(340, 100%, 63%, 1);
+        font: 700 41px 'Ubuntu', sans-serif;
+        margin-top: 50px;
+        margin-bottom: 5px;
+        text-align: center;
+    }
+    .header-cursos p {
+        font: 400 18px 'Ubuntu', sans-serif;
+        margin-bottom: 40px;
+        text-align: center;
+    }
     /*Section Cursos */
     .flexbox-cursos {
         display: flex;
+    }
+    .flexbox-cursos {
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: stretch;
+        width: 100%;
+        margin-top: 5%;
+        margin-bottom: 5%;
     }
     .img-cursos img {
         display: block;
@@ -841,6 +928,7 @@ footer {
     /*Section Curso */
     .flexbox-curso {
         display: flex;
+        margin-bottom: 20%;
     }
     .curso-img img {
         display: block;
@@ -856,12 +944,34 @@ footer {
     }
     .flexbox-video {
         display: flex;
-        gap: 30px;
         margin-bottom: 50px;
+        margin-bottom: 50px;
+        flex-wrap: wrap;
+        padding: 4%;
+    }
+    .flexbox-video {
+        display: grid;
+        gap: 0;
+        margin-bottom: 50px;
+    }
+    .txt-video h4 {
+        font: 700 20px 'Ubuntu', sans-serif;
+        color: hsla(340, 100%, 63%, 1);
+        margin-top: opx;
+        margin-bottom: 16px;
     }
     /*Section Blog */
     .flexbox-blog {
         display: flex;
+    }
+    .title-blog .grey-container {
+        padding-top: 7%;
+        padding-bottom: 0px;
+    }
+    .centralize-container h3 {
+        font: 700 19px 'Ubuntu', sans-serif;
+        margin-bottom: 0;
+        margin-top: 5%;
     }
     .blog-img img {
         margin-bottom: 20px;
@@ -883,10 +993,33 @@ footer {
     }
     .gallery {
         width: 50%;
+        margin-bottom: 5%;
     }
     /*Section Post */
     .flexbox-post-service {
         display: flex;
+    }
+    .data {
+        color: hsla(0, 0%, 62%, 1);
+        font: 300 15px 'Ubuntu', sans-serif;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .post-text {
+        margin-bottom: 100px;
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    .services-post-h2 {
+        font: 500 37px 'Ubuntu', sans-serif;
+    }
+    .img-post h2 {
+        font: 700 16px 'Ubuntu', sans-serif;
+    }
+    #post .imagem-mobile {
+        margin-bottom: 20px;
+        width: 61%;
+        max-height: 30%;
     }
     /*Section Contato*/
     .forms {
@@ -901,7 +1034,17 @@ footer {
     .img-content img {
         width: 100%;
     }
+    .img-content {
+        padding-top: 11%;
+        padding-bottom: 5%;
+        width: 100%;
+        height: auto;
+        padding-right: 11%;
+    }
 }
+
+
+/*/////// FINAL FORMATAÇÃO TABLET ///////////*/
 
 @media screen and (min-width: 1024px) {
     .title-header {
